k8s-manifests/cook-deployment.yaml
# k8s-manifests/cook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cook-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cook
  template:
    metadata:
      labels:
        app: cook
    spec:
      containers:
      - name: cook
        image: jayjacka/cook-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
