k8s-manifests/food-deployment.yaml
# k8s-manifests/food-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: food-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: food
  template:
    metadata:
      labels:
        app: food
    spec:
      containers:
      - name: food
        image: jayjacka/food-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
