k8s-manifests/fridge-deployment.yaml
# k8s-manifests/fridge-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fridge-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: fridge
  template:
    metadata:
      labels:
        app: fridge
    spec:
      containers:
      - name: menu
        image: jayjacka/fridge-service:latest
        ports:
        - containerPort: 50052
