k8s-manifests/menu-deployment.yaml
# k8s-manifests/menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menu
  template:
    metadata:
      labels:
        app: menu
    spec:
      containers:
      - name: menu
        image: jayjacka/menu-service:latest
        ports:
        - containerPort: 50051
