k8s-manifests/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: rabbitmq
spec:
  serviceName: "rabbitmq"
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:management
        ports:
        - containerPort: 5672  # RabbitMQ port
        - containerPort: 15672  # RabbitMQ management UI port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
spec:
  ports:
  - name: rabbitmq-port
    port: 5672
    targetPort: 5672
  - name: rabbitmq-management-port
    port: 15672
    targetPort: 15672
  selector:
    app: rabbitmq
